update credits.htm a bit [ci skip]

--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -15,7 +15,7 @@
 Thielemans, Kris</p>
 
 
-<p>See the <a href="https://github.com/UCL/STIR/blob/master/.zenodo.json">.zenodo.json</a> file for
+<p>See the <a href="https://github.com/UCL/STIR/blob/master/CITATION.cff">CITATION.cff</a> file for
   programmers, ordered roughly in order of number of lines
   surviving in the code (with the caveat that we cannot properly count contributions
   from during PARAPET days due to a problem when translating between CVS and git).
@@ -74,7 +74,7 @@ Thielemans, Kris</p>
    supervisor Lietsch, Stefan and Thielemans, Kris 
 
 8. Algorithms and Software Consulting Ltd, UK
-   (2011-2023)
+   (2011-2024)
    General maintenance, swig updates for Python support
    Thielemans, Kris
 
@@ -131,7 +131,7 @@ Thielemans, Kris</p>
     Matthew Strugari
 
 19. University College London, UK
-    (2013-2023)
+    (2013-2024)
     scatter updates, dynamic data updates, OPENMP, PLS, RDP etc priors, reconstruction hierarchy, Siemens ECAT8 support etc
     pinhole SPECT modelling
     help with integration and general maintenance
@@ -141,6 +141,8 @@ Thielemans, Kris</p>
     Emond, Elise
     Falc&oacute;n, Carl&eacute;s
     Twyman, Robert
+    Jurjew, Nicole
+    Bertolli, Ottavia
     Tsai, Yu-jung
     Thomas, Benjamin
     Porter, Sam D.
@@ -241,7 +243,7 @@ web site, as designed by Patrick Valente (Brunel).
 <hr>
 <!-- Created: Fri Jan 04  2002 -->
 <!-- hhmts start -->
-Last modified: Tue Jan 12  2023
+Last modified: Wed Feb 07  2024
 <!-- hhmts end -->
   </body>
 </html>
