--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Summary of changes in STIR release 5.0</title>
+    <title>Summary of changes in STIR release 6.1</title>
   </head>
 
   <body>
-    <h1>Summary of changes in STIR release 5.0</h1>
+    <h1>Summary of changes in STIR release 6.1</h1>
 
-<p>This version is 95% backwards compatible with STIR 4.0 for the user (see below).
+<p>This version is 95% backwards compatible with STIR 6.0 for the user (see below).
 Developers might need to make code changes as 
 detailed below.
 </p>
@@ -20,13 +20,13 @@ detailed below.
 improvements to the documentation.
 </p>
 
-<p>This release contains mainly code written by Kris Thielemans (UCL)  and Richard Brown (UCL).
+<p>This release contains mainly code written by Kris Thielemans (UCL).
 </p>
 
 <h2>Patch release info</h2>
 <ul>
   <li>
-    5.0.0 released ?/?/2020<br>
+    6.1.0 released ?/?/2020<br>
     <a href="https://github.com/UCL/STIR/milestone/4">GitHub Milestone 6.0</a>
   </li>
   <!--
