Parallelproj: bug-fixes for non-CUDA version

--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -51,6 +51,7 @@ improvements to the documentation.
 <h3>New functionality</h3>
 <ul>
 <li>
+  Add TOF capability of the parallelproj projector (see <a href=https://github.com/UCL/STIR/pull/1356>PR #1356</a>)
 </li>
 </ul>
 
