--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -52,6 +52,7 @@ improvements to the documentation.
 <ul>
 <li>
   Add TOF capability of the parallelproj projector (see <a href=https://github.com/UCL/STIR/pull/1356>PR #1356</a>)
+  Read TOF bin order from interfile header (see <a href=https://github.com/UCL/STIR/pull/1389> PR #1389</a>)
 </li>
 </ul>
 
