increase numerical precision of priors
use double in neighbourhood calculations

--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -59,8 +59,9 @@ improvements to the documentation.
 
 <h3>Changed functionality</h3>
 <ul>
-<li>
-</li>
+  <li>
+    Accumulation in computation of priors now uses doubles, which could result in slightly better precision. <a href=https://github.com/UCL/STIR/pull/1410>Part of PR #1410</a>.
+  </li>
 </ul>
 
 
