update RDP doc [ci skip]

--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -66,8 +66,9 @@ improvements to the documentation.
 
 <h3>Bug fixes</h3>
 <ul>
-<li>
-</li>
+  <li>The Relative Difference Prior gave incorrect results, probably since switching to C++-14 in version 6.0, although we are not sure.
+    See <a href=https://github.com/UCL/STIR/pull/1410>PR #1410</a> and associated <a href=https://github.com/UCL/STIR/pull/1409>issue #1409</a>.
+  </li>
 </ul>
 
 <h3>Known problems</h3>
