Add compute_gradient* (as opposed to only subset)
Also expand test to use all subsets, make it slower of course.

--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -52,7 +52,16 @@ improvements to the documentation.
 <ul>
 <li>
   Add TOF capability of the parallelproj projector (see <a href=https://github.com/UCL/STIR/pull/1356>PR #1356</a>)
+</li>
+<li>
   Read TOF bin order from interfile header (see <a href=https://github.com/UCL/STIR/pull/1389> PR #1389</a>)
+</li>
+<li>
+  <code>GeneralisedObjectiveFunction</code> has 2 new papers to add compute full gradient
+  (<code>compute_gradient</code> and <code>compute_gradient_without_penalty</code>). Previously,
+  only subset gradient were available.
+  <br>
+  <a href=https://github.com/UCL/STIR/pull/1418> PR #1418</a>
 </li>
 </ul>
 
