--- a/documentation/release_6.1.htm
+++ b/documentation/release_6.1.htm
@@ -135,8 +135,9 @@ from the above):</H2>
 
 <h3>Build system</h3>
 <ul>
-<li>
-</li>
+  <li>
+    Force C++ version according to CERN ROOT versions: ROOT 6.28.10 needs C++17 and 6.30.2 needs C++20.
+  </li>
 </ul>
 
 <h3>Test changes</h3>
