small change to credits

--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -116,9 +116,9 @@ Thielemans, Kris</p>
     Roethlisberger, Michael
 
 16. Positrigo, Switserland
-    SWIG improvements and "blocks on cylindrical" testing
-    Mikhaylova, Ekaterina
+    SWIG improvements, "blocks on cylindrical" testing and fixes
     Jehl, Markus
+    Mikhaylova, Ekaterina
     Fisher, Jannis
 
 17. National Physical Laboratory, UK
@@ -132,7 +132,8 @@ Thielemans, Kris</p>
 
 19. University College London, UK
     (2013-2024)
-    scatter updates, dynamic data updates, OPENMP, PLS, RDP etc priors, reconstruction hierarchy, Siemens ECAT8 support etc
+    scatter updates, dynamic data updates, OPENMP, PLS, RDP etc priors, reconstruction hierarchy, Siemens ECAT8 support,
+    TOF support, parallelproj integration etc
     pinhole SPECT modelling
     help with integration and general maintenance
     Brown, Richard
