update release notes
[ci skip]

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -77,7 +77,7 @@ from the above):</H2>
       data in one call to the C++ library, as opposed to many small calls. Also added move constructors to the <code>Array</code>,
       <code>VectorWithOffset</code> classes.
       <br>
-      <a href=https://github.com/UCL/STIR/pull/1236>issue #1236</a>.
+      <a href=https://github.com/UCL/STIR/pull/1236>PR #1236</a> and <a href=https://github.com/UCL/STIR/pull/1438>PR #1438</a>.
     </li>
 </ul>
 
