--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -100,7 +100,7 @@ from the above):</H2>
     but non-TOF instead. This did not happen in our normal reconstruction code, and would have thrown an error
     if it occured.
     <br>
-    Fixed in <a href=https://github.com/UCL/STIR/pull/1427>issue #1427</a>.
+    Fixed in <a href=https://github.com/UCL/STIR/pull/1427>PR #1427</a>.
   </li>
 </ul>
 
@@ -108,7 +108,12 @@ from the above):</H2>
 <h3>Other code changes</h3>
 <ul>
   <li>
-    Fixes an incompatibility with C++20.
+    Fixed an incompatibility with C++20.
+  </li>
+  <li>
+    Enabled OpenMP for <code>Array</code> members <code>find_max(), find_min(), sum(), sum_positivie()</code>.
+    <br>
+    <a href=https://github.com/UCL/STIR/pull/1449>PR #1449</a>.
   </li>
 </ul>
 
