Update of Release notes

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -110,6 +110,9 @@ from the above):</H2>
   <li>
     Fixes an incompatibility with C++20.
   </li>
+  <li>
+    Changes to allow reading Siemens Biograph Vision data: iSSRB and SSRB are now included in the SWIG interface; minor changes to a shell script altering e7tools headers.
+  </li>
 </ul>
 
 <h3>Build system</h3>
