STIR changes to execute script that deals with e7tools data for the Siemens Vision (#1453)
changes to be able to deal with script to preprocess Siemens data:
- add SSRB/inverse_SSRB to SWIG
- minor changes convertSiemensToInterfile.sh

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -115,6 +115,9 @@ from the above):</H2>
     <br>
     <a href=https://github.com/UCL/STIR/pull/1449>PR #1449</a>.
   </li>
+  <li>
+    Changes to allow reading Siemens Biograph Vision data: iSSRB and SSRB are now included in the SWIG interface; minor changes to a shell script altering e7tools headers.
+  </li>
 </ul>
 
 <h3>Build system</h3>
