documentation/release_6.2.htm: add automatic detection of TOF sensitivity to release notes

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -118,6 +118,9 @@ from the above):</H2>
   <li>
     Changes to allow reading Siemens Biograph Vision data: iSSRB and SSRB are now included in the SWIG interface; minor changes to a shell script altering e7tools headers.
   </li>
+  <li>
+    Allows automatic detection if TOF sensitivities are being used.
+  </li>
 </ul>
 
 <h3>Build system</h3>
