Auto use_tofsens (#1458)
automatically use TOF sensitivity calculation for TOF norm

We default use_tofsens=false, as this is the best for most scanners. However, for
Siemens Vision 600 (and others), the e7tools norm is TOF. This resulted in a
call to  error().

This update detects if the norm uses BinNormalisationFromProjData with TOF data,
and sets use_tofsens=true if it is. It does this by adding `is_TOF_only_norm()` to 
`BinNormalisation` (defaulting to `false`), and overriding it for certain classes.

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -59,6 +59,15 @@
     <code>Array::sum()</code> (and hence images etc) now accumulates in a variable at higher precision to avoid loss of precision.<br>
     <a href=https://github.com/UCL/STIR/pull/1439>PR #1439</a>
   </li>
+  <li>
+    <code>PoissonLogLikelihoodWithLinearModelForMeanAndProjData</code> now attempts to auto-detect
+    if it should compute sensitivity using TOF back-projection or not. It does this by
+    checking if its normalisation object can only handle TOF data or not.
+    This should mean that the <tt>use time-of-flight sensitivities</tt> keyword should now
+    rarely (if ever) be necessary.
+    <br>
+    <a href=https://github.com/UCL/STIR/pull/1458>PR #1458</a>
+    </li>
 </ul>
 
 
