updating release notes

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -73,6 +73,12 @@
 
 <h3>Bug fixes</h3>
 <ul>
+  <li>
+    There was a bug in the computation of the detector coordinates for <code>BlocksOnCylindrical</code>
+    scanners that caused the buckets to not be symmetric. <br>
+    <a href=https://github.com/UCL/STIR/pull/1462>PR #1462</a>
+  </li>
+
 </ul>
 
 <h3>Build system</h3>
