add TOF mashing to release notes

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -78,6 +78,11 @@
     <br>
     <a href=https://github.com/UCL/STIR/pull/1458>PR #1458</a>
     </li>
+    <li>
+    SSRB now allows to mash TOF bins.
+    <br>
+    <a href=https://github.com/UCL/STIR/pull/1464>PR #1464</a>
+    </li>
 </ul>
 
 
