Code review changes.

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -88,7 +88,11 @@
     scanners that caused the buckets to not be symmetric. <br>
     <a href=https://github.com/UCL/STIR/pull/1462>PR #1462</a>
   </li>
-
+  <li>
+    <code>BlocksOnCylindrical</code> scanners were not axially symmetric due to a bug in how gaps were
+    handled. Also, downsampling of <code>BlocksOnCylindrical</code> scanners in scatter simulation was inaccurate.<br>
+    <a href=https://github.com/UCL/STIR/pull/1466>PR #1466</a>
+  </li>
 </ul>
 
 <h3>Build system</h3>
