--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -169,6 +169,17 @@ from the above):</H2>
   </li>
 </ul>
 
+<h4>recon_test_pack</h4>
+<ul>
+  <li>
+    The output of <tt>simulate_PET_data_for_tests.sh</tt> can now varied by setting environment variables, e.g.
+    <code>max_rd</code>.
+  </li>
+  <li>
+    New test <tt>run_test_SSRB.sh</tt>
+  </li>
+</ul>
+
 </body>
 
 </html>
