added RDP timings to stir_timings
removed obsolete cuda_rdp_tests accordingly

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -56,6 +56,7 @@
     New prior <code>CudaRelativeDifferencePrior</code> (use <tt>Cuda Relative Difference Prior</tt> in <tt>.par</tt> files), only
     available if the CUDA toolkit is found during building. Results are identical to <code>RelativeDifferencePrior</code>
     up to numerical rounding issues. However, the code is currently limited to 3x3x3 weights.<br>
+    Added timings for the RDP (both non-CUDA and CUDA) tothe  <tt>stir_timings</tt> utility.<br>
     <a href=https://github.com/UCL/STIR/pull/1408>PR #1408</a>
   </li>
 </ul>
