Some code cleanup and updating the release notes.

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -51,6 +51,12 @@
     in <code>ProjData</code>).<br>
     <a href=https://github.com/UCL/STIR/pull/1439>PR #1439</a> and <a href=https://github.com/UCL/STIR/pull/1448>PR #1448</a>
   </li>
+  <li>
+    <code>ScatterSimulation</code> can now downsample the scanner transaxially (crystals per ring) for <code>BlocksOnCylindrical</code>,
+    scanners, which speeds up <code>ScatterEstimation</code> considerably. By default, downsampling the detectors per reading
+    is disabled for backwards compatibility.<br>
+    <a href=https://github.com/UCL/STIR/pull/1291>PR #1291</a>
+  </li>
 </ul>
 
 
