--- a/documentation/history.htm
+++ b/documentation/history.htm
@@ -11,6 +11,7 @@
 The following links give you a summary what has changed. However,
 the ChangeLog is the definite (but tedious) information.
 <ul >
+<li><a href="release_6.2.htm">version 6.2.0 (dated 23 July 2024)</a></li>
 <li><a href="release_6.1.htm">version 6.1.0 (dated 16 May 2024)</a></li>
 <li><a href="release_6.0.htm">version 6.0.0 (dated 07 February 2024)</a></li>
 <li><a href="release_5.2.htm">version 5.2.0 (dated 30 October 2023)</a></li>
