added Markus to release notes for 6.2 [ci skip]

--- a/documentation/release_6.2.htm
+++ b/documentation/release_6.2.htm
@@ -27,7 +27,8 @@
 
     <p>
       This release contains mainly code written by Nicole Jurjew (UCL) (SSRB for TOF),
-      Imraj Singh (UCL) (CUDA version of the Relative Difference Prior) and Kris Thielemans (UCL).
+      Imraj Singh (UCL) (CUDA version of the Relative Difference Prior),
+      Markus Jehl (Positrigo) (fixes for blocks on cylindrical) and Kris Thielemans (UCL).
     </p>
 
 <h2>Patch release info</h2>
