--- a/documentation/credits.htm
+++ b/documentation/credits.htm
@@ -142,6 +142,7 @@ Thielemans, Kris</p>
     Emond, Elise
     Falc&oacute;n, Carl&eacute;s
     Twyman, Robert
+    Singh, Imraj
     Jurjew, Nicole
     Bertolli, Ottavia
     Tsai, Yu-jung
@@ -244,7 +245,7 @@ web site, as designed by Patrick Valente (Brunel).
 <hr>
 <!-- Created: Fri Jan 04  2002 -->
 <!-- hhmts start -->
-Last modified: Wed Feb 07  2024
+Last modified: Tue Jul 23 2024
 <!-- hhmts end -->
   </body>
 </html>
