updated release notes [ci skip]

--- a/documentation/release_6.3.htm
+++ b/documentation/release_6.3.htm
@@ -25,6 +25,11 @@
     is disabled for backwards compatibility.<br>
     <a href=https://github.com/UCL/STIR/pull/1291>PR #1291</a>
   </li>
+  <li>
+    Data from GE Discovery MI systems in RDF9 should now be readable. TOF information on these scanners has also been added.
+    However, projection data is currently still always returned as non-TOF (but list-mode data is read as TOF).<br>
+    <a href=https://github.com/UCL/STIR/pull/1503>PR #1503</a>
+  </li>
 </ul>
 
 
