Remove openmode and add release notes.

--- a/documentation/release_6.3.htm
+++ b/documentation/release_6.3.htm
@@ -48,6 +48,11 @@
 
 <H2>What is new for developers (aside from what should be obvious from the above):</H2>
 
+<h3>New functionality</h3>
+
+<li>
+  <code>ProjDataInMemory</code> <code>read_from_file</code> method now returns a <code>ProjDataInMemory</code> object.
+</li>
 
 <h3>Changed functionality</h3>
 
