[ci skip] Update release 6.3 notes

--- a/documentation/release_6.3.htm
+++ b/documentation/release_6.3.htm
@@ -35,6 +35,11 @@
 
 <h3>Changed functionality</h3>
 
+    <li>
+      Rework <code>MLEstimateComponentBasedNormalisation</code> into a class.
+      This allows for more flexibility in the use of the class without calling CLI executables. <br>
+      <a href=https://github.com/UCL/STIR/pull/1499>PR # 1499</a>
+    </li>
 
 <h3>Bug fixes</h3>
 
@@ -68,6 +73,12 @@
 
 <h4>C++ tests</h4>
 
+    <li>
+      Added <code>MLEstimateComponentBasedNormalisationTest</code> that tests the basic functionality of the
+      <code>MLEstimateComponentBasedNormalisation</code> class and creation of normalisation factors from
+      the calculated PET components. <br>
+      <a href=https://github.com/UCL/STIR/pull/1499>PR # 1499</a>
+    </li>
 
 <h4>recon_test_pack</h4>
 
