ECAT Scanners use negative tilt

--- a/documentation/release_6.3.htm
+++ b/documentation/release_6.3.htm
@@ -34,7 +34,11 @@
 
 
 <h3>Changed functionality</h3>
-
+    <ul>
+      <li>
+        Default ECAT scanner configurations updated to use a negative intrinsic tilt.
+      </li>
+    </ul>
 
 <h3>Bug fixes</h3>
 
